// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inline diff options: { expand: false, printBasicPrototype: true } 1`] = `
[
  "- Expected
+ Received

@@ -1,7 +1,7 @@
  Array [
-   1000,
+   0,
    1,
    2,
    3,
    4,
    5,
@@ -12,11 +12,11 @@
    10,
    11,
    12,
    13,
    14,
-   2000,
+   15,
    16,
    17,
    18,
    19,
    20,
@@ -26,7 +26,7 @@
    24,
    25,
    26,
    27,
    28,
-   3000,
+   29,
  ]",
  "- Expected
+ Received

  Object {
    "arr": Array [
      1,
-     3,
+     2,
    ],
    "obj": Object {
-     "k": "bar",
+     "k": "foo",
    },
  }",
]
`;

exports[`inline diff options: undefined 1`] = `
[
  "- Expected
+ Received

  [
-   1000,
+   0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
-   2000,
+   15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
-   3000,
+   29,
  ]",
  "- Expected
+ Received

  {
    "arr": [
      1,
-     3,
+     2,
    ],
    "obj": {
-     "k": "bar",
+     "k": "foo",
    },
  }",
]
`;
